Fix OnVisible custom element

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -192,65 +192,3 @@ svg.icon {
   fill: currentColor;
   overflow: hidden;
 }
-
-.fade-in {
-	animation: fadeIn 0.7s ease-in-out;
-}
-
-@keyframes fadeIn {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
-}
-
-.slide-from-end {
-	animation: slideFromEnd 0.7s ease-in-out;
-}
-
-@keyframes slideFromEnd {
-	from {
-		transform: translateX(100%);
-	}
-	to {
-		transform: translateX(0);
-	}
-}
-
-.slide-from-end-fade-in {
-	animation: slideFromEndFadeIn 0.7s ease-in-out;
-}
-
-@keyframes slideFromEndFadeIn {
-	from {
-		transform: translateX(100%);
-		opacity: 0;
-	}
-	50% {
-		opacity: 0;
-	}
-	to {
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
-
-.slide-from-start-fade-in {
-	animation: slideFromStartFadeIn 0.7s ease-in-out;
-}
-
-@keyframes slideFromStartFadeIn {
-	from {
-		transform: translateX(-100%);
-		opacity: 0;
-	}
-	50% {
-		opacity: 0;
-	}
-	to {
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
